[package]
name = "fiat-crypto"
version = "0.1.14"
authors = ["Fiat Crypto library authors <REDACTED@REDACTED>"]
edition = "2018"
description = "Fiat-crypto generated Rust"
homepage = "https://github.com/REDACTED/fiat-crypto"
repository = "https://github.com/REDACTED/fiat-crypto"
readme = "README.md"
license = "MIT OR Apache-2.0 OR BSD-1-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = [ "std" ]
std = []
